--- a/WorldBankGraphAgent/notebook.ipynb
+++ b/WorldBankGraphAgent/notebook.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c4a63278",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
     "    json.dump(data, file, indent=4, ensure_ascii=False)\n",
     "\n",
     "print('Data saved at: data/treated_dataset.json')\n",
-    "print(data)"
+    "print(data[:10])"
    ]
   },
   {
